corrections in md in nd

--- a/model_compare.ipynb
+++ b/model_compare.ipynb
@@ -166,7 +166,7 @@
    "metadata": {},
    "source": [
     "# Conformal predictive distribution system\n",
-    "This is the \"standard\" implementation of the cpds. It uses the crepes library developed by Henrik Boström at KTH. Currently the \"normalized\" version is used with default values for generating the difficulty estimates. See Crepes [Github](https://github.com/henrikbostrom/crepes) page for detailed information about the library. Here the entire cpds for each prediction is return, all values below the minimum (0) are truncated to that value and the minimum and maximun values are added to the start and end points. After that the distribution (CDF) is interpolated (linear) to 200 points for consistency across all models and and test cases.\n",
+    "This is the \"standard\" implementation of the cpds. It uses the crepes library developed by Henrik Boström at KTH. Currently the \"normalized\" version is used with default values for generating the difficulty estimates. See Crepes [Github](https://github.com/henrikbostrom/crepes) page for detailed information about the library. Here the entire cpds for each prediction is return, all values below the minimum (0) are truncated to that value and the minimum and maximun values are added to the start and end points. After that the distribution (CDF) is interpolated (linear) to 200 points for consistency across all models and test cases.\n",
     "\n",
     "Note: the variable mod_params is a list of dictionaries that are passed to the model constructors. It should contain all the versions of the models we wish to test. This is the case for all models in the module."
    ]
@@ -211,7 +211,7 @@
    "metadata": {},
    "source": [
     "## Non-exchangeable conformal predictor\n",
-    "This is the non-exchangeable split conformal predictor described in [this article](https://arxiv.org/abs/2202.13415) by Barber et. al., assuming that the undelying model is trained on other data. It currently allows one to change the forget factor as model input. The conformity scores here are only based on the residuals of the predictions. This system is originally only used for set predictions and probabilistic predictions. The set predictions are transformed to probabilistic predictions by sequentially adding on larger and larger prediction intervals corresponding to different confidence levels. As before, values below the minimum value are truncated and then everything is interpolated to 200-points."
+    "This is the non-exchangeable split conformal predictor described in [this article](https://arxiv.org/abs/2202.13415) by Barber et. al., assuming that the undelying model is trained on other data. It currently allows one to change the forget factor as model input. The conformity scores here are only based on the residuals of the predictions. This system is originally only used for set predictions and not probabilistic predictions. The set predictions are transformed to probabilistic predictions by sequentially adding on larger and larger prediction intervals corresponding to different confidence levels. As before, values below the minimum value are truncated and then everything is interpolated to 200-points."
    ]
   },
   {
