correction conformal std plot

--- a/model_compare.ipynb
+++ b/model_compare.ipynb
@@ -258,7 +258,7 @@
     "\n",
     "$\\alpha_i = a |y_i - \\hat{y}_i| - \\mathbf{w}^T \\mathbf{V(x_i)}$ \n",
     "\n",
-    "where $\\mathbf{V(x_i)}$ is the variance of each variable in the ensemble input and $a$ and $\\mathbf{w}$ are weights passed as model parameters. The thought is that the larger the varaince the more uncertain a prediction should be. This is especially tuned for an ensemble type system so it might prove less good for the simulated data."
+    "where $\\mathbf{V(x_i)}$ is the variance of each variable in the ensemble input and $a$ and $\\mathbf{w}$ are weights passed as model parameters. The thought is that the larger the varaince the more uncertain a prediction should be."
    ]
   },
   {
