updated text about training schedule in notebook

--- a/model_compare.ipynb
+++ b/model_compare.ipynb
@@ -73,20 +73,7 @@
    "metadata": {},
    "source": [
     "## Training schedule\n",
-    "We use a training schedule for testing the models. It works by splitting the data into a number of different trianing / validation data configurations. It then runs each desired model through all configurations. The one making the best predictions on the validation data will be trained on all the data before making the next prediction. The prediction is saved as a result before the corresponding data point is added to the training set and the process is ran again. This tries to mimic what one would actually do in the real world, meaning that each test point can be predicted with different hyper-parameters. The data splitting and model choice implementations can be found in `mod_tr_schedule.py` for a detailed view. However in general it works in the following:\n",
-    "1. Number of splits $k$ is passed together with data and model (parameters)\n",
-    "2. For each set of model-parameters\n",
-    "    1. Train model on $\\mod(n,k) $ points to start\n",
-    "    2. Predict the value of every $k$:th point there after and train the model in between\n",
-    "    3. Shift the points to predict with one step and run through data-set again\n",
-    "    4. Repeat until the model has run through the training-set $k$ times\n",
-    "3. Determine which set of model-parameters performs best on the validation data through some scoring scheme\n",
-    "4. Train that model on all the training data and predict the next test-point\n",
-    "5. Add the prediction as a result and add the next test-point to the training set\n",
-    "6. Repeat for all test-points\n",
-    "\n",
-    "\n",
-    "There is an alternative version used for two of the models, where instead of predicting each $k$:th point we create $k$ blocks, train/calibrate the models on the other data before predicting that block. Then we move on to train the models again and predict on the next block. It is similar to the first version just that it requires less retraining instanciations for the models that can't handle concatenation to their training set."
+    "We use a training schedule for testing the models. It works by splitting the data into a number of different trianing / validation data configurations. It then runs each desired model through all configurations. The one making the best predictions on the validation data will be trained on all the data before making the next prediction. The prediction is saved as a result before the corresponding data point is added to the training set and the process is ran again. This tries to mimic what one would actually do in the real world, meaning that each test point can be predicted with different hyper-parameters. The data splitting and model choice implementations can be found in `mod_tr_schedule.py` for a detailed view. There are two version of hyperparameter selection. The first trains on a small subset in the beginning of the training set, then predicts each point and adds those points to training as we go along the training set. The other version divides the data into k blocks, predicting each block when trained on the others. The model configuration with best prediction according to CRPS is chosen."
    ]
   },
   {
