corrected to right pred statement for cpds and qrf

--- a/model_compare.ipynb
+++ b/model_compare.ipynb
@@ -374,7 +374,7 @@
     "print('Accuracy 0.9: ' + str(np.sum((np.squeeze(measurements[1]) > pred_cpds[:,10]) & (np.squeeze(measurements[1]) < pred_cpds[:,189]))/len(measurements[1])))\n",
     "print('Width 0.9: ' + str(np.mean(pred_cpds[:,189]-pred_cpds[:,10])))\n",
     "print('Accuracy 0.5: ' + str(np.sum((np.squeeze(measurements[1]) > pred_cpds[:,50]) & (np.squeeze(measurements[1]) < pred_cpds[:,149]))/len(measurements[1])))\n",
-    "print('Width 0.5: ' + str(np.mean(pred[:,149]-pred_cpds[:,50])))\n",
+    "print('Width 0.5: ' + str(np.mean(pred_cpds[:,149]-pred_cpds[:,50])))\n",
     "print('CRPS: ' + str(crps(pred_cpds,measurements[1])))"
    ]
   },
@@ -708,7 +708,7 @@
     "mod_params_qrf = [{'num_trees':200,'window_length':100}, {'num_trees':100,'window_length':np.inf},{'num_trees':200,'window_length':np.inf}]\n",
     "pred_qrf, mods_qrf = train_schedule(RanForestQuantile, mod_params_qrf, inp_data[0], forecasts[0], measurements[0], inp_data[1], forecasts[1], measurements[1], num_splits=5, block_training=True)\n",
     "print('Accuracy 0.9: ' + str(np.sum((np.squeeze(measurements[1]) > pred_qrf[:,10]) & (np.squeeze(measurements[1]) < pred_qrf[:,189]))/len(measurements[1])))\n",
-    "print('Width 0.9: ' + str(np.mean(pred[:,189]-pred_qrf[:,10])))\n",
+    "print('Width 0.9: ' + str(np.mean(pred_qrf[:,189]-pred_qrf[:,10])))\n",
     "print('Accuracy 0.5: ' + str(np.sum((np.squeeze(measurements[1]) > pred_qrf[:,50]) & (np.squeeze(measurements[1]) < pred_qrf[:,149]))/len(measurements[1])))\n",
     "print('Width 0.5: ' + str(np.mean(pred_qrf[:,149]-pred_qrf[:,50])))\n",
     "print('CRPS: ' + str(crps(pred_qrf,measurements[1])))"
