updated md in notebook

--- a/model_compare.ipynb
+++ b/model_compare.ipynb
@@ -670,7 +670,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quantile random forest"
+    "## Quantile regression forest"
    ]
   },
   {
